--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<meta charset="utf-8">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,16 +35,17 @@
             <h3>Dynamic background images from <a href="https://source.unsplash.com">Unsplash</a>.</h3>
         </div>
     </div>
-    <!-- Load API's Asynchronously -->
-    <script async defer onerror="forismaticError()" src="https://api.forismatic.com/api/1.0/?method=getQuote&amp;format=jsonp&amp;jsonp=parseQuote&amp;lang=en"></script>
-    <script async defer onerror="googleMapsError()" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRp_auo7l8jFHeMshZSNVEgNs70qntAXQ&v=3&callback=initMap"></script>
-    <!-- End API's -->
 
     <!-- Load All Javascript Requirements-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/knockout-3.4.2.js"></script>
     <script src="js/core_app.js" type="text/javascript"></script>
     <!-- End Javascript Requirements-->
+
+    <!-- Load API's Asynchronously -->
+    <script async defer onerror="forismaticError()" src="https://api.forismatic.com/api/1.0/?method=getQuote&amp;format=jsonp&amp;jsonp=parseQuote&amp;lang=en"></script>
+    <script async defer onerror="googleMapsError()" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRp_auo7l8jFHeMshZSNVEgNs70qntAXQ&v=3&callback=initMap"></script>
+    <!-- End API's -->
 
 </body>
 
